--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3,9 +3,12 @@
 
     <!-- General/various strings -->
     <string name="app_name">Xposed Installer</string>
+    <string name="menuSend">Envoyer</string>
+    <string name="menuSaveToSd">Sauver sur la carte SD</string>
+    <string name="xposed_not_active">"La dernière version d'Xposed est inactive. Avez-vous installé le framework et redémarré ?"</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome">Bienvenue dans <b>l\'installateur Xposed</b>!\nVeuillez choisir ce que vous voulez faire:</string>
+    <string name="welcome">Bienvenue dans <b>l\'installateur Xposed</b> !\nVeuillez choisir ce que vous voulez faire:</string>
     <string name="tabInstall">Framework</string>
     <string name="tabInstallDescription">Ici vous pouvez manager le framework Xposed, qui est nécessaire au fonctionnement de n\'importe quel module.</string>
     <string name="tabModules">Modules</string>
@@ -16,6 +19,8 @@
     <string name="welcome_update_available">Des mises à jour pour vos modules sont disponibles.</string>
     <string name="tabSettings">Paramètres</string>
     <string name="tabSettingsDescription">Allez dans cette section pour configurer l\'installateur Xposed et le framework.</string>
+    <string name="tabLogs">Journaux</string>
+    <string name="tabLogsDescription">Affiche et permet d\'enregistrer/envoyer les journaux du framework Xposed.</string>
     <string name="tabAbout">À propos</string>
     <string name="tabAboutDescription">Apprenez-en à propos des créateurs de Xposed, où vous pouvez obtenir du support pour cette application, etc&#8230;</string>
 
@@ -23,37 +28,41 @@
     <string name="install">Installer/Mettre à jour</string>
     <string name="uninstall">Désinstaller</string>
     <string name="installedVersion">courante</string>
-    <string name="none">---</string>
     <string name="latestVersion">dernière</string>
     <string name="versions">Versions:</string>
     <string name="soft_reboot">Redémarrage doux</string>
     <string name="reboot">Redémarrer</string>
-    <string name="areyousure">Êtes-vous sûr?</string>
+    <string name="areyousure">Êtes-vous sûr ?</string>
     <string name="phone_not_compatible">Xposed n\'est pas (encore) compatible avec Android SDK version %1$d ou l\'architecture de votre processeur (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed n\'a pas été testé avec Android SDK version %d, mais il semble compatible. Vous pouvez tenter de l\'installer si vous vous sentez l\'âme d\'un aventurier.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Le module Xposed n\'est pas encore activé</string>
-    <string name="module_empty_description">(pas de description)</string>
+    <string name="module_empty_description">(aucune description)</string>
     <string name="module_no_ui">Ce module ne fournit pas d\'interface utilisateur</string>
-    <string name="no_xposed_modules_found">Aucun module Xposed trouvé!</string>
+    <string name="no_xposed_modules_found">Aucun module Xposed trouvé !</string>
     <string name="xposed_module_list_updated">La liste des modules Xposed a été rafraîchie\nLes changements seront actifs après redémarrage</string>
     <string name="warning_xposed_min_version">Ce module nécessite une nouvelle version de XposedBridge (%d) et ne peut donc pas être activé.</string>
     <string name="no_min_version_specified">Ce module ne spécifie pas la version de XposedBridge dont il a besoin.</string>
     <string name="warning_min_version_too_low">Ce module a été créé pour XposedBridge version %1$d, mais du fait de changements incompatibles dans la version %2$d, il a été désactivé.</string>
+    <string name="module_launch">Lancer l\'UI</string>
+    <string name="module_download_updates">Installer/Mettre à jour</string>
+    <string name="module_support">Support</string>
+    <string name="module_app_info">Info appli</string>
+    <string name="module_uninstall">Désinstaller</string>
 
     <!-- Download tab -->
     <string name="menuSearch">Chercher</string>
     <string name="menuReload">Recharger</string>
-    <string name="changes">Changes:</string>
-    <string name="branch_display">(%s branch)</string>
+    <string name="changes">Modifications:</string>
+    <string name="branch_display">(branche %s)</string>
     <string name="download_author">par %s</string>
     <string name="download_unknown_author">auteur inconnu</string>
-    <string name="download_status_installed">Installed (version %s)</string>
+    <string name="download_status_installed">Installé (version %s)</string>
     <string name="download_status_update_available">Mise à jour disponible (version %1$s \u2192 %2$s)</string>
     <string name="download_timestamps">Ajouté le %1$s \u00b7 Mis à jour le %2$s</string>
     <string name="download_sorting_title">Ordre de tri</string>
-    <string name="download_sorting_status">Trier par status</string>
+    <string name="download_sorting_status">Trier par statut</string>
     <string name="download_sorting_updated">Trier par date de mise à jour</string>
     <string name="download_sorting_created">Trier par date de création</string>
     <string name="download_section_framework">Framework</string>
@@ -73,8 +82,13 @@
     <string name="settings_performance_experiment">Expérimentation pour les performances</string>
     <string name="settings_performance_experiment_summary">Si vous activez ceci, les performances de votre système peuvent être améliorées, diminuées ou rester identiques. N`hésitez pas à essayer et à nous rapporter les effets obtenus (ou s\'il n\'y en a pas eu). Vous devez réinstaller le framework et redémarrer après avoir changé ce paramètre.</string>
 
+    <!--  Logs tab  -->
+    <string name="logs_load_failed">Impossible de lire le journal:</string>
+    <string name="logs_save_failed">Impossible d\'écrire le journal:</string>
+    <string name="sdcard_not_writable">Carte SD non trouvée ou en lecture seule</string>
+
     <!-- About tab -->
-    <string name="about_developers_label">Dévelopeurs principaux:</string>
+    <string name="about_developers_label">Développeurs principaux:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> et <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Nous vous prions de ne <b>pas</b> nous contacter directement pour demander du support, utilisez le lien ci-dessous.</string>
     <string name="about_translator_label">Traducteur:</string>
@@ -82,7 +96,7 @@
     <string name="about_version_label">Version de l\'application:</string>
     <string name="about_source_label">Code source:</string>
     <string name="about_support_label">Obtenez du support ici:</string>
-    <string name="about_support_warning">Ce lien est <b>uniquement</b> pour l\'installateur et le framework! Ne <b>pas</b> l\'utiliser si vous avez besoin d\'aide pour un module, contactez plutôt l\'auteur du module.</string>
+    <string name="about_support_warning">Ce lien est <b>uniquement</b> pour l\'installateur et le framework ! Ne <b>pas</b> l\'utiliser si vous avez besoin d\'aide pour un module, contactez plutôt l\'auteur du module.</string>
     <string name="about_libraries_label">Librairies utilisées:</string>
 
     <!-- DownloadView -->
@@ -97,13 +111,13 @@
 
     <!-- DownloadUtils -->
     <string name="download_md5sum_incorrect">Somme de contrôle MD5 incorrecte (téléchargée: %1$s, attendue: %2$s)</string>
-    <string name="download_could_not_read_file">Impossible de lire le ficher téléchargé: %s</string>
-    <string name="download_no_valid_apk">Le ficher téléchargé n\'est pas un APK valide (ou est incompatible)</string>
-    <string name="download_incorrect_package_name">Nom de package incorrect (téléchargé: %1$s, attendu: %2$s)</string>
+    <string name="download_could_not_read_file">Impossible de lire le fichier téléchargé: %s</string>
+    <string name="download_no_valid_apk">Le fichier téléchargé n\'est pas un APK valide (ou est incompatible)</string>
+    <string name="download_incorrect_package_name">Nom de paquet incorrect (téléchargé: %1$s, attendu: %2$s)</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">Téléchargement %1$s échoué: %2$d (%3$s)</string>
     <string name="repo_download_failed">Téléchargement %1$s échoué: %2$s</string>
-    <string name="repo_load_failed">Impossible de charger le dépot depuis %1$s:\n%2$s</string>
+    <string name="repo_load_failed">Impossible de charger le dépôt depuis %1$s:\n%2$s</string>
 
 </resources>
