--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -126,6 +126,9 @@
     <string name="logs_save_failed">Log konnte nicht auf der SD-Karte gespeichert werden:</string>
     <string name="sdcard_not_writable">SD-Karte wurde nicht gefunden oder ist nicht beschreibbar</string>
     <string name="log_too_large">Log ist größer als %1$,d kB, die ersten %2$,d kB wurden übersprungen</string>
+    <string name="menuClearLog">Log jetzt leeren</string>
+    <string name="logs_cleared">Log wurde geleert</string>
+    <string name="logs_clear_failed">Konnte Log nicht leeren:</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Hauptentwickler:</string>
