--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -4,7 +4,7 @@
     <!-- General/various strings -->
     <string name="app_name">Xposed安装器</string>
     <string name="menuSend">发送</string>
-    <string name="menuSaveToSd">发送到SD卡</string>
+    <string name="menuSaveToSd">保存到SD卡</string>
     <string name="xposed_not_active">最新版本的Xposed当前未激活。您是否已安装框架并重启？</string>
 
     <!-- Welcome screen / main sections -->
@@ -12,11 +12,11 @@
     <string name="tabInstall">框架</string>
     <string name="tabInstallDescription">此处您能管理Xposed框架，任何模块想正常运行都需要它。</string>
     <string name="tabModules">模块</string>
-    <string name="tabModulesDescription">框架本身不增加任何功能。您需要使用模块。安装模块后在此处激活它们。</string>
+    <string name="tabModulesDescription">框架本身不增加任何功能，您需要安装模块后在此处激活它们。</string>
     <string name="tabDownload">下载</string>
-    <string name="tabDownloadDescription">此处您能访问模块仓库，您可以搜索并下载您喜欢的模块，并及时更新它们。</string>
-    <string name="welcome_framework_update_available">Xposed框架有更新可用。</string>
-    <string name="welcome_update_available">一个或多个模块有更新可用。</string>
+    <string name="tabDownloadDescription">此处您能访问模块仓库，您可以搜索并下载您喜欢的模块或更新它们。</string>
+    <string name="welcome_framework_update_available">Xposed框架有更新。</string>
+    <string name="welcome_update_available">一个或多个模块有更新。</string>
     <string name="tabSettings">设置</string>
     <string name="tabSettingsDescription">此处可配置Xposed安装器和框架。</string>
     <string name="tabLogs">日志</string>
@@ -28,7 +28,7 @@
     <string name="install">安装/更新</string>
     <string name="uninstall">卸载</string>
     <string name="installedVersion">激活</string>
-    <string name="latestVersion">程序自带</string>
+    <string name="latestVersion">自带</string>
     <string name="versions">版本：</string>
     <string name="soft_reboot">软重启</string>
     <string name="reboot">重启</string>
@@ -77,7 +77,7 @@
     <!-- Settings tab -->
     <string name="settings_group_download">下载</string>
     <string name="settings_enable_downloads">启用下载</string>
-    <string name="settings_enable_downloads_summary">允许Xposed安装器检查更新和新模块</string>
+    <string name="settings_enable_downloads_summary">允许Xposed安装器检查更新新模块</string>
     <string name="settings_group_experimental">实验性</string>
     <string name="settings_performance_experiment">性能试验</string>
     <string name="settings_performance_experiment_summary">如果您启用该选项，您的系统性能可能更好、更差或没有变化。请随意试用并回报您观察到的效果(或者根本没变化)。修改选项后您需要重新安装框架并重启。</string>
@@ -85,14 +85,14 @@
     <!--  Logs tab  -->
     <string name="logs_load_failed">无法读取日志：</string>
     <string name="logs_save_failed">无法将日志写入SD卡：</string>
-    <string name="sdcard_not_writable">未找到SD卡或不可写入</string>
+    <string name="sdcard_not_writable">未找到SD卡或不可写</string>
 
     <!-- About tab -->
     <string name="about_developers_label">主要开发者：</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> 与 <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">请<b>不</b>要直接联系我们获取帮助，使用下面的链接。</string>
     <string name="about_translator_label">翻译：</string>
-    <string name="translator">Cye3s, liveasx</string>
+    <string name="translator">Cye3s</string>
     <string name="about_version_label">应用程序版本：</string>
     <string name="about_source_label">源码：</string>
     <string name="about_support_label">获取支持：</string>
