Rewrite installation process with interactive su shell
The main benefit is better error handling, especially detection of failure
to get root access.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,6 +35,27 @@
     <string name="areyousure">Are you sure?</string>
     <string name="phone_not_compatible">Xposed is not (yet) compatible with Android SDK version %1$d or your processor architecture (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed has not been tested with Android SDK version %d, but it seems to be compatible. You can try installing it if you feel adventurous.</string>
+    <string name="reboot_failed">Reboot failed. Please use the device\'s normal reboot function.</string>
+
+    <!--  File operations -->
+    <string name="root_failed">Failed to get root access.\n\nMake sure your device is rooted properly and you have not blocked shell commands.</string>
+    <string name="file_extract_failed">Could not extract %s</string>
+    <string name="file_mounting_writable">Mounting %s writable&#8230;</string>
+    <string name="file_mount_writable_failed">Could not mount %s writable</string>
+    <string name="file_trying_to_continue">Trying to continue anyway&#8230;</string>
+    <string name="file_backup_already_exists">Backup already exists at %s</string>
+    <string name="file_backup_not_found">No backup found at %s</string>
+    <string name="file_backup_failed">Failed to create a backup of %s</string>
+    <string name="file_backup_successful">Created backup at %s</string>
+    <string name="file_backup_restoring">Restoring backup from %s</string>
+    <string name="file_copying">Copying %s&#8230;</string>
+    <string name="file_copy_failed">Could not copy %1$s to %2$s</string>
+    <string name="file_move_failed">Could not move %1$s to %2$s</string>
+    <string name="file_set_perms_failed">Could not set permissions for %s</string>
+    <string name="file_set_owner_failed">Could not set owner for %s</string>
+    <string name="file_removing">Removing %s&#8230;</string>
+    <string name="file_remove_failed">Could not remove %s</string>
+    <string name="file_done">Done! Changes will become active on reboot.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed module is not activated yet</string>
