--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -35,6 +35,27 @@
     <string name="areyousure">Bist du sicher?</string>
     <string name="phone_not_compatible">Xposed ist (noch) nicht mit der Android-SDK-Version %1$d oder deiner Prozessor-Architektur (%2$s) kompatibel.</string>
     <string name="not_tested_but_compatible">Xposed wurde noch nicht mit der Android-SDK-Version %d getestet, aber es scheint kompatibel damit zu sein. Wenn du abenteuerlustig bist, kannst die Installation versuchen.</string>
+    <string name="reboot_failed">Neustart fehlgeschlagen. Bitte verwende die normale Neustartfunktion des Geräts.</string>
+
+    <!--  File operations -->
+    <string name="root_failed">Root-Zugriff fehlgeschlagen\n\nStelle sicher, dass das Gerät korrekt gerootet ist und Shell-Kommandos nicht blockiert werden.</string>
+    <string name="file_extract_failed">%s konnte nicht entpackt werden</string>
+    <string name="file_mounting_writable">Mounte %s beschreibbar&#8230;</string>
+    <string name="file_mount_writable_failed">%s konnte nicht beschreibbar gemacht werden</string>
+    <string name="file_trying_to_continue">Versuche dennoch fortzusetzen&#8230;</string>
+    <string name="file_backup_already_exists">Backup existiert bereits unter %s</string>
+    <string name="file_backup_not_found">Kein Backup unter %s gefunden</string>
+    <string name="file_backup_failed">Backup von %s konnte nicht erstellt werden</string>
+    <string name="file_backup_successful">Backup wurde unter %s erstellt</string>
+    <string name="file_backup_restoring">Stelle Backup von %s wieder her&#8230;</string>
+    <string name="file_copying">Kopiere %s&#8230;</string>
+    <string name="file_copy_failed">Konnte %1$s nicht nach %2$s kopieren</string>
+    <string name="file_move_failed">Konnte %1$s nicht nach %2$s verschieben</string>
+    <string name="file_set_perms_failed">Berechtigungen für %s konnten nicht gesetzt werden</string>
+    <string name="file_set_owner_failed">Besitzer für %s konnte nicht gesetzt werden</string>
+    <string name="file_removing">Entferne %s&#8230;</string>
+    <string name="file_remove_failed">%s konnte nicht entfernt werden</string>
+    <string name="file_done">Fertig! Änderungen werden nach einem Neustart sichtbar.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed-Modul ist noch nicht aktiv</string>
