Moved Play Store string to strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="module_support">Support</string>
     <string name="module_app_info">App info</string>
     <string name="module_uninstall">Uninstall</string>
+    <string name="module_play_store">Play Store</string>
 
     <!-- Download tab -->
     <string name="menuSearch">Search</string>
