--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- General/various strings -->
     <string name="app_name">Xposed Telepítő</string>
+    <string name="menuSend">Küldés</string>
+    <string name="menuSaveToSd">SD kártyára mentés</string>
+    <string name="xposed_not_active">Az Xposed legfrissebb verziója jelenleg nem aktív. Telepítetted a keretrendszert és újraindítottad az eszközt?</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">Üdvözöl az <b>Xposed Telepítő</b>!\nKérlek válaszd ki mit szeretnél tenni:</string>
@@ -12,11 +15,12 @@
     <string name="tabModulesDescription">A keretrendszer önmagában semmilyen funkciót nem biztosít. Ahhoz modulok kellenek. Ebben a szekcióban aktiválhatod a modulokat miután telepítetted őket.</string>
     <string name="tabDownload">Letöltések</string>
     <string name="tabDownloadDescription">Ez a szekció hozzáférést biztosít egy modulgyűjteményhez, ahol keresheted és letöltheted amelyeket szeretnéd és frissen is tarthatod őket.</string>
-
-    <string name="welcome_framework_update_available">Frissítés elérhető az Xposed keretrendszerhez.</string>
+    <string name="welcome_framework_update_available">Frissítés elérhető az Xposed keretrendszerhez (%s).</string>
     <string name="welcome_update_available">Egy vagy több frissítés elérhető.</string>
     <string name="tabSettings">Beállítások</string>
     <string name="tabSettingsDescription">Látogasd meg ezt a szekciót, hogy beállítsd az Xposed Telepítőt és a keretrendszert.</string>
+    <string name="tabLogs">Napló</string>
+    <string name="tabLogsDescription">Tekintsd meg és mentsd/küldd el az Xposed keretrendszer naplóját.</string>
     <string name="tabAbout">Rólunk</string>
     <string name="tabAboutDescription">Tudj meg többet az Xposed készítőiről, hol találsz támogatást az alkalmazáshoz, stb.</string>
 
@@ -41,6 +45,11 @@
     <string name="warning_xposed_min_version">A modulhoz frissebb XposedBridge verzió (%d) szükséges, ezért nem aktiválható.</string>
     <string name="no_min_version_specified">A modul nem tünteti fel a szükséges XposedBridge verziót.</string>
     <string name="warning_min_version_too_low">Ez a modul a(z) %1$d verziójú XposedBridge-hoz lett készítve, de a(z) %2$d verzió összeférhetetlen változtatásai miatt le lett tiltva.</string>
+    <string name="module_launch">UI megnyitása</string>
+    <string name="module_download_updates">Letöltés/Frissítések</string>
+    <string name="module_support">Támogatás</string>
+    <string name="module_app_info">Alkalmazásinformáció</string>
+    <string name="module_uninstall">Eltávolítás</string>
 
     <!-- Download tab -->
     <string name="menuSearch">Keresés</string>
@@ -64,6 +73,19 @@
     <string name="download_section_7d">Elmúlt 7 napban</string>
     <string name="download_section_30d">Elmúlt 30 napban</string>
     <string name="download_section_older">Több, mint 30 napja</string>
+
+    <!-- Settings tab -->
+    <string name="settings_group_download">Letöltése</string>
+    <string name="settings_enable_downloads">Letöltések engedélyezése</string>
+    <string name="settings_enable_downloads_summary">Engedélyezd az Xposed Telepítőnek, hogy frissítéseket és új modulokat keressen</string>
+    <string name="settings_group_experimental" tools:ignore="UnusedResources">Kísérlet</string>
+    <string name="settings_performance_experiment" tools:ignore="UnusedResources">Teljesítmény kísérlet</string>
+    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">Ha ezt engedélyezed, a rendszer teljesítménye lehet, hogy növekszik, csökken vagy nem változik. Nyugodtan próbáld ki és jelezz vissza, hogy melyik hatást látod (vagy hogy nincs semmilyen). Újra kell telepítened a keretrendszert és újraindítanod az eszközt, miután ezt megváltoztatod.</string>
+
+    <!-- Logs tab -->
+    <string name="logs_load_failed">Nem lehetett olvasni a naplót:</string>
+    <string name="logs_save_failed">Nem lehetett a naplót az SD kártyára írni:</string>
+    <string name="sdcard_not_writable">SD kártya nem található vagy nem írható</string>
 
     <!-- About tab -->
     <string name="about_developers_label">Fő fejlesztők:</string>
